add new tests and fix api-docs
